fix spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2214,11 +2214,6 @@ html.can_embed-html body {
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
 }
 
 .archive-post img {
