--- a/wp-content/themes/eshv/scss/_archive.scss
+++ b/wp-content/themes/eshv/scss/_archive.scss
@@ -24,7 +24,6 @@
 
 .archive-post {
   display: flex;
-  justify-content: space-between;
 
   img {
     margin-right: 24px;
